# project-automation-platform

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: health.py
app/core/: __init__.py  config.py  dependencies.py  errors.py  logging.py
app/db/: base.py  session.py
app/models/: __init__.py  enums.py  events.py  executions.py  github.py  projects.py  settings.py  tasks.py  workers.py
app/repositories/: __init__.py  events.py  projects.py
app/schemas/: __init__.py  health.py
app/services/: health.py
app/workers/: __init__.py  runtime.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/events/: page.tsx
dashboard/app/graphs/: page.tsx
dashboard/app/projects/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/tasks/: page.tsx
dashboard/app/workers/: page.tsx
dashboard/components/: empty-state.tsx  page-header.tsx  status-badge.tsx
dashboard/components/layout/: activity-panel.tsx  app-shell.tsx  sidebar.tsx
dashboard/components/providers/: query-provider.tsx
dashboard/lib/: api-client.ts
dashboard/types/: platform.ts
docker/api/: Dockerfile
docker/dashboard/: Dockerfile
docker/sandbox-runner/: Dockerfile
docker/worker/: Dockerfile
docs/: 00_PROJECT_OVERVIEW.md  01_SYSTEM_ARCHITECTURE.md  02_TECH_STACK.md  03_DATABASE_DESIGN.md  04_LANGGRAPH_ARCHITECTURE.md  05_AGENT_SPECIFICATIONS.md  06_CODING_PROVIDER_INTERFACE.md  07_GITHUB_WORKFLOW.md  08_API_SPECIFICATION.md  09_DASHBOARD_SPECIFICATION.md  10_DOCKER_DEPLOYMENT.md  11_IMPLEMENTATION_ROADMAP.md  12_DEVELOPMENT_GUIDELINES.md  13_ACCEPTANCE_CRITERIA.md  14_PROJECT_RULES.md  MASTER_PLAN.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
tests/: test_health.py  test_repositories.py
(+2 files in other folders)
