[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-automation-platform"
version = "0.1.0"
description = "AI Software Factory orchestration platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
    "structlog>=24.4.0,<25.0.0",
    "uvicorn[standard]>=0.30.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0,<1.0.0",
    "httpx>=0.27.2,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.6.8,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]
